# llm_Inference

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
benchmarks/: README.md
docs/: PROJECT_OUTLINE.md  architecture.md  project_status.md  testing.md
others/: 01-serving-engines.md  02-runtime-kernel-backends.md  03-production-orchestration.md  04-papers-and-techniques.md  README.md  feature_taxonomy.md  search_log.md  source_registry.md
src/llm_inference/: __init__.py  __main__.py  cli.py  config.py
src/llm_inference/api/: __init__.py  types.py
src/llm_inference/audit/: __init__.py  events.py
src/llm_inference/decoding/: __init__.py  sampling.py  stop.py
src/llm_inference/distributed/: __init__.py
src/llm_inference/engine/: __init__.py  core.py
src/llm_inference/kernels/: __init__.py
src/llm_inference/kernels/cpu/: __init__.py  reference.py
src/llm_inference/kernels/cuda/: __init__.py  placeholders.py
src/llm_inference/memory/: __init__.py  kv_cache.py
src/llm_inference/observability/: __init__.py  logging.py
src/llm_inference/runtime/: __init__.py  contracts.py  registry.py
src/llm_inference/runtime/backends/: __init__.py
src/llm_inference/scheduler/: __init__.py  basic.py  types.py
src/llm_inference/tokenization/: __init__.py  mock.py  protocol.py
tests/: test_api_types.py  test_audit_events.py  test_backend_contract.py  test_cli.py  test_config.py  test_decoding.py  test_engine_audit.py  test_engine_lifecycle.py  test_kernels.py  test_runtime_registry.py  test_scheduler_memory.py  test_tokenization_model.py
(+8 files in other folders)
